--- a/Exercicios/Exercicio_C4_v2.html
+++ b/Exercicios/Exercicio_C4_v2.html
@@ -56,7 +56,8 @@
 
 
       <label for="senha">Senha</label>
-      <input type="password" name="senha" id="senha" size="12" maxlength="12" title="Entre 8 e 12 caracteres" autocomplete="off" onkeydown="msg1();" >
+      <input type="password" name="senha" id="senha" size="12" maxlength="12" title="Entre 8 e 12 caracteres" 
+      autocomplete="off" onkeydown="msg1();" >
       <p id="msgsenha" style="font-size:100%;color:#ff0000"></p>
 
       <label for="senha">Repita a Senha</label>
