--- a/ExemplosAula/Exemplo_praticando_classes_02.html
+++ b/ExemplosAula/Exemplo_praticando_classes_02.html
@@ -4,14 +4,14 @@
 </head>
 <body>
 
-<h2> Utilizando Classes</h2>
+<h2> Praticando  Classes - 02</h2>
 
 
 <script>
 
 class Carro1 {
     constructor(tipo,ano,cor) {
-	this.tipo = tipo; // Para o construtor iniciar um atributo, referenciC!-lo atravC)s do this
+	this.tipo = tipo; // Para o construtor iniciar um atributo, referenciá-lo através do this
 	this.ano = ano;
 	this.cor = cor;
       }
