--- a/ExemplosAula/Exemplo_praticando_classes_01.html
+++ b/ExemplosAula/Exemplo_praticando_classes_01.html
@@ -4,20 +4,20 @@
 </head>
 <body>
 
-<h2> Utilizando Classes</h2>
+<h2> Praticando  Classes - 01</h2>
 
 
 <script>
 
 function Carro(tipo,ano,cor) {
-	this.tipo = tipo; // Para o construtor iniciar um atributo, referenciC!-lo atravC)s do this
+	this.tipo = tipo; // Para o construtor iniciar um atributo, referenciá-lo através do this
 	this.ano = ano;
 	this.cor = cor;
 	}
 var carro = new Carro("Astra" , "2004" , 'preta');  // para usar
 document.write("Carro: "+ carro.tipo + '<br>');
 
-function calcula_seguro(ano) {  // o mC)todo C) criado como uma funC'C#o
+function calcula_seguro(ano) {  // o método é criado como uma função
  return ano/10;
 }
 carro.valor_seguro = calcula_seguro;  // Associa ao objeto carro
