--- a/ExemplosAula/Exemplo_praticando_prototypes.html
+++ b/ExemplosAula/Exemplo_praticando_prototypes.html
@@ -4,14 +4,14 @@
 </head>
 <body>
 
-<h2> Prototypes</h2>
+<h2> Praticando  Prototypes</h2>
 
 
 <script>
 
 class Carro {   // com a palavra chave Class
        constructor(tipo,ano,cor) {
-	    this.tipo = tipo; // Para o construtor iniciar um atributo, referenciC!-lo atravC)s do this
+	    this.tipo = tipo; // Para o construtor iniciar um atributo, referenciá-lo através do this
 	    this.ano = ano;
 	    this.cor = cor;
       }
